Fix account attribute

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,10 +41,10 @@
 				</div>
 				<div class="form-group col-sm">
 					<label>Montant</label>
-					<input type="text" name="balance" value="" class="form-control" ng-model="createAccountRequest.amount"/>
+					<input type="text" name="balance" value="" class="form-control" ng-model="createAccountRequest.balance"/>
 				</div>
 				<div class="col-sm">
-					<button type="submit" class="btn btn-primary" ng-click="create(createAccountRequest.account_id, createAccountRequest.amount)">Enregistrer</button>
+					<button type="submit" class="btn btn-primary" ng-click="create(createAccountRequest.account_id, createAccountRequest.balance)">Enregistrer</button>
 				</div>
 			</div>
 		</form>
